# trimul-trad

./: eval_modal_trimul_kernel.py  eval_modal_vectoradd_kernel.py  pyproject.toml  run_agent.sh
trimul_kernel/: agent.py  program.md  run_eval.py  starting_point.py  tools.py
vectoradd_kernel/: agent.py  program.md  run_eval.py  tools.py
